--- a/packages/apollo-cli/package.json
+++ b/packages/apollo-cli/package.json
@@ -64,6 +64,8 @@
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
     "oclif": "^4.4.2",
+    "react-dom": "^18.2.0",
+    "rxjs": "^7.4.0",
     "shx": "^0.3.3",
     "ts-node": "^10.3.0",
     "tsx": "^4.6.2",
