Update CLI to work with new feature model (#426)
* Rebase to main

* pre test done

* Misc. fixes

* Move some code from common to shared package

* Remove unused disable directive

* Start using types and adapt code to new feature model

Add vscode tasks to start Apollo for cypress and cli testing

* Fix lint import

* Fix attribute conversion

In previous commit the `newAttributes` set collected attributes but
didn't transfer them to the final set.

* More use of strong typing

* Expected line count edited to reflect new feature model and sequence
download

* Fix linter

* Fix some dependency issus

---------

Co-authored-by: Kyosti Sutinen <kyosti@ebi.ac.uk>
Co-authored-by: Garrett Stevens <stevens.garrett.j@gmail.com>

--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -20,7 +20,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "cypress:start": "GUEST_USER_ROLE=admin MONGODB_URI=\"mongodb://localhost:27017/apolloTestDb?directConnection=true\" LOG_LEVELS=error,warn yarn start"
+    "cypress:start": "GUEST_USER_ROLE=admin MONGODB_URI=\"mongodb://localhost:27017/apolloTestDb?directConnection=true\" LOG_LEVELS=error,warn yarn start",
+    "test:cli:start": "ALLOW_ROOT_USER=true ROOT_USER_NAME=admin ROOT_USER_PASSWORD=pass MONGODB_URI=\"mongodb://localhost:27017/apolloTestCliDb?directConnection=true\" LOG_LEVELS=error,warn yarn start"
   },
   "dependencies": {
     "@apollo-annotation/common": "workspace:^",
@@ -30,7 +31,7 @@
     "@emotion/styled": "^11.10.6",
     "@gmod/gff": "1.2.0",
     "@gmod/indexedfasta": "^2.0.4",
-    "@jbrowse/core": "^2.11.2",
+    "@jbrowse/core": "^2.13.1",
     "@mui/base": "^5.0.0-alpha.118",
     "@mui/material": "^5.11.14",
     "@nestjs/common": "^10.1.0",
