--- a/packages/apollo-cli/package.json
+++ b/packages/apollo-cli/package.json
@@ -50,6 +50,7 @@
     "yaml": "^2.3.4"
   },
   "devDependencies": {
+    "@apollo-annotation/mst": "workspace:^",
     "@apollo-annotation/shared": "workspace:^",
     "@istanbuljs/esm-loader-hook": "^0.2.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
@@ -63,6 +64,8 @@
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
     "oclif": "^4.4.2",
+    "react-dom": "^18.2.0",
+    "rxjs": "^7.4.0",
     "shx": "^0.3.3",
     "ts-node": "^10.3.0",
     "tsx": "^4.6.2",
