Format CLI README when packing

--- a/packages/apollo-cli/package.json
+++ b/packages/apollo-cli/package.json
@@ -28,7 +28,7 @@
     "dev": "tsx bin/dev.js",
     "postpack": "shx rm -f oclif.manifest.json",
     "posttest": "yarn lint",
-    "prepack": "yarn build && oclif manifest && oclif readme",
+    "prepack": "yarn build && oclif manifest && oclif readme && prettier --write README.md",
     "prepare": "yarn build",
     "test": "mocha --require src/test/fixtures.ts 'src/**/*.test.ts'",
     "test:ci": "nyc mocha 'src/**/*.test.ts'",
@@ -64,6 +64,7 @@
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
     "oclif": "^4.4.2",
+    "prettier": "^3.3.2",
     "react-dom": "^18.2.0",
     "rxjs": "^7.4.0",
     "shx": "^0.3.3",
