--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,18 +6,26 @@ on:
 
 jobs:
   publish-npm:
-    name: Publish to npm
+    name: Publish to NPM
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Check out
+        uses: actions/checkout@v4
       # Setup .npmrc file to publish to npm
-      - uses: actions/setup-node@v4
+      - name: Use Node.js 18.x
+        uses: actions/setup-node@v4
         with:
           node-version: 18
           registry-url: https://registry.npmjs.org
           scope: '@apollo-annotation'
-      - run: yarn --immutable
-      - run: |
+          cache: yarn
+      - name: Install
+        run: yarn --immutable
+      - name: Build shared
+        run: yarn build
+        working-directory: packages/apollo-shared
+      - name: Publish
+        run: |
           yarn config set npmAuthToken ${{ secrets.NPM_TOKEN }}
           yarn workspaces foreach --no-private --all npm publish --tolerate-republish
         env:
