Copy plugin to correct location when deploying

--- a/.github/workflows/deploy/Dockerfile
+++ b/.github/workflows/deploy/Dockerfile
@@ -3,6 +3,7 @@ ARG JBROWSE_VERSION
 COPY ./httpd.conf /usr/local/apache2/conf/httpd.conf
 COPY ./jbrowse-plugin-apollo.umd.development.js /usr/local/apache2/htdocs/
 COPY ./jbrowse-plugin-apollo.umd.production.min.js /usr/local/apache2/htdocs/
+COPY ./jbrowse-plugin-apollo.umd.production.min.js /usr/local/apache2/htdocs/apollo.js
 WORKDIR /usr/local/apache2/htdocs/
 RUN <<EOF
 set -o errexit
