--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "apollo3",
+  "private": true,
   "description": "Monorepo containing Apollo front and back end code",
-  "packageManager": "yarn@4.3.1",
   "workspaces": [
     "packages/*"
   ],
@@ -42,10 +42,11 @@
     "lint-staged": "^15.2.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.3.2",
+    "prettier-plugin-packagejson": "^2.5.2",
     "react": "^18.2.0",
     "tsx": "^4.6.2",
     "typescript": "^5.5.3",
     "yargs": "^17.7.2"
   },
-  "private": true
+  "packageManager": "yarn@4.3.1"
 }
