--- a/packages/apollo-shared/package.json
+++ b/packages/apollo-shared/package.json
@@ -26,8 +26,11 @@
   "devDependencies": {
     "@nestjs/common": "^10.1.0",
     "@nestjs/core": "^10.1.0",
+    "@types/chai": "^4.3.19",
     "@types/node": "^18.14.2",
     "@types/rimraf": "^3",
+    "chai": "^5.1.1",
+    "chai-exclude": "^3.0.0",
     "glob": "^11.0.0",
     "mobx": "^6.6.1",
     "mobx-state-tree": "^5.1.7",
