--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -1,9 +1,8 @@
 {
   "name": "@apollo-annotation/website",
-  "version": "0.0.0",
+  "version": "0.1.17",
   "private": true,
   "scripts": {
-    "docusaurus": "docusaurus",
     "start": "docusaurus start --port 3131",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
@@ -24,24 +23,12 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.5.2",
-    "@docusaurus/tsconfig": "3.5.2",
-    "@docusaurus/types": "3.5.2",
+    "@docusaurus/module-type-aliases": "^3.5.2",
+    "@docusaurus/theme-classic": "^3.5.2",
+    "@docusaurus/tsconfig": "^3.5.2",
+    "@docusaurus/types": "^3.5.2",
+    "@types/node": "^18.14.2",
+    "@types/react": "^18.3.4",
     "typescript": "^5.5.3"
-  },
-  "browserslist": {
-    "production": [
-      ">0.5%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 3 chrome version",
-      "last 3 firefox version",
-      "last 5 safari version"
-    ]
-  },
-  "engines": {
-    "node": ">=18.0"
   }
 }
