--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Upload
         working-directory: packages/website
         run: |
-          aws s3 sync --delete build/ s3://jbrowse.org/jb2/
+          aws s3 sync --delete build/ s3://apollo.jbrowse.org/
           aws cloudfront create-invalidation --distribution-id EL84YTOVCGNJZ --paths '/*'
