--- a/packages/apollo-common/package.json
+++ b/packages/apollo-common/package.json
@@ -22,6 +22,7 @@
     "@nestjs/common": "^10.1.0",
     "@nestjs/core": "^10.1.0",
     "@types/node": "^18.14.2",
+    "generic-filehandle": "^3.0.0",
     "mongoose": "^6.12.0",
     "typescript": "^5.5.3"
   },
