Tmp commit addressing https://github.com/GMOD/Apollo3/pull/432
Fix #424

--- a/packages/apollo-cli/package.json
+++ b/packages/apollo-cli/package.json
@@ -36,6 +36,7 @@
     "commands": "./dist/commands",
     "dirname": "apollo-cli",
     "helpOptions": {
+      "maxWidth": 80,
       "flagSortOrder": "none"
     },
     "plugins": [
