Adjust summaries and descriptions

--- a/packages/apollo-cli/package.json
+++ b/packages/apollo-cli/package.json
@@ -53,6 +53,9 @@
       "feature": {
         "description": "Commands to handle features"
       },
+      "jbrowse": {
+        "description": "Commands to manage the JBrowse configuration"
+      },
       "refseq": {
         "description": "Commands to handle reference sequences"
       },
