Add ability for indexed sequence file to be uploaded and used in an assembly (#432)
* Start implementing file upload|download|get

* Add delete command and various small edits

* Add FileCommand handling file operations

* Handle default profile via undefined

* Download file as stream

* Handling of gzip input and bgzip'd & indexed fasta

* CLI can upload and add assembly from gzip files (#405 and #407)

* CLI can add assembly in non-editable mode with `--no-db` flag, i.e. without loading
  sequence to mongodb (#406). Only bgzip'd & indexed fasta file are
  supported, not plain fa/fai files.

See tests in test.py: `testFeatureChecksIndexed`, `testFileUploadGzip`,
`testAddAssemblyWithoutLoadingInMongo`

* Fix linter

* Formatting

* Add description for file CLI topic

* Deduplicate sequence fetching code

* Reference File schema from Assembly schema

* Rename commands

* Remove -i option since file is positional

* Rename option --no-db and some other fixes

* Add additional type and make input arg required

* Tmp commit

* fix app start issue

* fix lint

* Tmp commit addressing https://github.com/GMOD/Apollo3/pull/432

Fix #424

* Tmp commit

* This should address comments in https://github.com/GMOD/Apollo3/pull/432

But most likely there will be changes to clunky code

* Temp commit to fix buffer

* Fix filehandle type

* Use files service to get filehandles

* Fix fileId vs fileIds and other issues for https://github.com/GMOD/Apollo3/pull/432

All tests except those for chekcs passing

* Allow fasta input to be gzip

* Fixes after rebase

* Move LocalFileGzip to collab server package

* Match selector to other updated tests

---------

Co-authored-by: dariober <dario.beraldi@gmail.com>
Co-authored-by: Shashank Budhanuru Ramaraju <shashank.b.r.gowda45587@gmail.com>

--- a/packages/apollo-cli/package.json
+++ b/packages/apollo-cli/package.json
@@ -36,6 +36,7 @@
     "commands": "./dist/commands",
     "dirname": "apollo-cli",
     "helpOptions": {
+      "maxWidth": 80,
       "flagSortOrder": "none"
     },
     "plugins": [
@@ -45,22 +46,25 @@
     "topicSeparator": " ",
     "topics": {
       "assembly": {
-        "description": "Commands to handle assemblies"
+        "description": "Commands to manage assemblies"
       },
       "change": {
-        "description": "Commands to handle the log of changes made to the database"
+        "description": "Commands to manage the change log"
       },
       "feature": {
-        "description": "Commands to handle features"
+        "description": "Commands to manage features"
       },
       "jbrowse": {
         "description": "Commands to manage the JBrowse configuration"
       },
       "refseq": {
-        "description": "Commands to handle reference sequences"
+        "description": "Commands to manage reference sequences"
       },
       "user": {
-        "description": "Commands to handle users"
+        "description": "Commands to manage users"
+      },
+      "file": {
+        "description": "Commands to manage files"
       }
     }
   },
