--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -11,10 +11,10 @@ on:
       tag:
         description: 'Image tag'
         required: true
-        default: 'devel'
+        default: 'dev'
         type: choice
         options:
-          - devel
+          - dev
           - latest
 
 jobs:
@@ -35,19 +35,22 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push Apollo CLI image
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           platforms: linux/arm64/v8,linux/amd64
           push: true
           tags: ghcr.io/gmod/apollo-cli:${{ inputs.tag }}
           context: packages/apollo-cli
+          file:
+            ${{ inputs.tag == 'dev' && 'packages/apollo-cli/dev.Dockerfile' ||
+            'packages/apollo-cli/Dockerfile' }}
           outputs:
             type=image,annotation-index.org.opencontainers.image.description=
             Apollo CLI
           cache-from: type=registry,ref=user/app:latest
           cache-to: type=inline
       - name: Build and push Apollo collaboration server image
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           platforms: linux/arm64/v8,linux/amd64
           push: true
