Ensure config dir exists when loading demo data
skip-checks:true

--- a/.github/workflows/reload_demo_data.yml
+++ b/.github/workflows/reload_demo_data.yml
@@ -73,6 +73,7 @@ jobs:
               "$@"
           }
 
+          mkdir --parents ~/.config/apollo-cli
           touch ~/.config/apollo-cli/config.yml
           apollo config address http://host.docker.internal/apollo
           apollo config accessType root
