Use docker context when loading demo data
skip-checks:true

--- a/.github/workflows/reload_demo_data.yml
+++ b/.github/workflows/reload_demo_data.yml
@@ -69,6 +69,7 @@ jobs:
               --volume ~/.config/apollo-cli:/root/.config/apollo-cli \
               --volume ~/data:/data \
               --env APOLLO_PROFILE=auto \
+              --context staging \
               ghcr.io/gmod/apollo-cli:${{ vars.DOCKER_TAG }} \
               "$@"
           }
