--- a/.github/workflows/reload_demo_data.yml
+++ b/.github/workflows/reload_demo_data.yml
@@ -46,6 +46,7 @@ jobs:
             HostName ${{ steps.ec2-describe-instances.outputs.INSTANCE_ADDRESS }}
             User ec2-user
             IdentityFile ~/.ssh/staging
+            LogLevel VERBOSE
           END
           ssh-keyscan -H ${{ steps.ec2-describe-instances.outputs.INSTANCE_ADDRESS }} >> ~/.ssh/known_hosts
       - name: Create Docker context
@@ -55,8 +56,6 @@ jobs:
             --description "Staging server"
       - name: Load data
         run: |
-          ssh -G staging
-          exit 147
           docker pull ghcr.io/gmod/apollo-cli:${{ vars.DOCKER_TAG }}
           function apollo() {
             docker \
