Print ssh config
skip-checks:true

--- a/.github/workflows/reload_demo_data.yml
+++ b/.github/workflows/reload_demo_data.yml
@@ -55,6 +55,8 @@ jobs:
             --description "Staging server"
       - name: Load data
         run: |
+          ssh -G staging
+          exit 147
           docker pull ghcr.io/gmod/apollo-cli:${{ vars.DOCKER_TAG }}
           function apollo() {
             docker \
