--- a/.github/workflows/reload_demo_data.yml
+++ b/.github/workflows/reload_demo_data.yml
@@ -47,6 +47,9 @@ jobs:
             User ec2-user
             IdentityFile ~/.ssh/staging
             LogLevel VERBOSE
+            ServerAliveInterval 60
+            ServerAliveCountMax 10
+            TCPKeepAlive no
           END
           ssh-keyscan -H ${{ steps.ec2-describe-instances.outputs.INSTANCE_ADDRESS }} >> ~/.ssh/known_hosts
       - name: Create Docker context
