--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   build:
-    name: Build and upload
+    name: Build or fetch and upload
     runs-on: ubuntu-latest
     steps:
       - name: Check out
@@ -26,10 +26,23 @@ jobs:
           node-version: 18
           cache: yarn
       - name: Install
+        if: inputs.environment == 'staging'
         run: yarn --immutable
       - name: Build plugin
+        if: inputs.environment == 'staging'
         run: yarn build
         working-directory: packages/jbrowse-plugin-apollo
+      - name: Fetch plugin
+        if: inputs.environment == 'prod'
+        working-directory: packages/jbrowse-plugin-apollo
+        run: |
+          mkdir --parents dist
+          cd dist/
+          wget --output-document=- --quiet https://registry.npmjs.org/@apollo-annotation/jbrowse-plugin-apollo/ > jpa.json
+          LATEST_VERSION=$(jq --raw-output '."dist-tags".latest' jpa.json)
+          TARBALL=$(jq --raw-output ".versions.\"${LATEST_VERSION}\".dist.tarball" jpa.json)
+          wget --output-document=- --quiet ${TARBALL} | \
+            tar --extract --gzip --file=- --strip=2 package/dist/jbrowse-plugin-apollo.umd.development.js package/dist/jbrowse-plugin-apollo.umd.production.min.js
       - name: Upload built plugin files
         uses: actions/upload-artifact@v4
         with:
