--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -1,17 +1,16 @@
 {
   "name": "@apollo-annotation/website",
-  "version": "0.1.17",
   "private": true,
   "scripts": {
-    "start": "docusaurus start --port 3131",
     "build": "docusaurus build",
-    "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
+    "deploy": "docusaurus deploy",
     "serve": "docusaurus serve",
-    "write-translations": "docusaurus write-translations",
+    "start": "docusaurus start --port 3131",
+    "swizzle": "docusaurus swizzle",
+    "typecheck": "tsc",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "write-translations": "docusaurus write-translations"
   },
   "dependencies": {
     "@docusaurus/core": "3.5.2",
